# nonlinear-kirchhoff

./: .dir-locals.el  .gitignore  BlockMatrixAdapter.cpp  BlockMatrixAdapter.h  BlockVectorAdapter.cpp  BlockVectorAdapter.h  CMakeLists.txt  DKTGradient.cpp  DKTGradient.h  HermiteDirichletBC.cpp  HermiteDirichletBC.h  IsometryConstraint.cpp  IsometryConstraint.h  KirchhoffAssembler.cpp  KirchhoffAssembler.h  NonLinearKirchhoff.ufl  NonlinearKirchhoff.ufl  README.md  data.h  dkt_utils.cpp  dkt_utils.h  main.cpp  output.cpp  output.h  test_dkt.cpp  tests.cpp  tests.h
sweet/: compare.hpp  conv.hpp  format.hpp  int128.hpp  options.hpp
